add more splitter
Change-Id: I24548bad16bca96b93d1045f1001dc7321da70bf

--- a/source/_posts/2021-11-16-gostream.md
+++ b/source/_posts/2021-11-16-gostream.md
@@ -8,6 +8,7 @@ tags: 编程
 [GoStream](https://github.com/a3d21/gostream)是个参考Java StreamAPI，基于go-linq实现的数据处理库。
 它可以声明式地对数据进行转换、过滤、排序、分组、收集，而无需关心操作细节。
 
+<!-- more -->
 ## 背景
 
 项目中经常需要对数据进行分组、转换，已有的数据处理库go-linq、go-streams都无法满足我需求。API不友好、不支持多级分组... 所以想新写个Libary，于是，有了GoStream！！
