--- a/source/_posts/2022-11-29-id-gen.md
+++ b/source/_posts/2022-11-29-id-gen.md
@@ -6,6 +6,8 @@ tags: 架构
 
 分布式ID生成器，是分布式系统中最基础，最简单的一部分。通过对分布式ID生成器的学习，可以理解分布式系统设计的核心关键。
 
+<!-- more -->
+
 - [引子：为什么需要分布式ID生成器？](#引子为什么需要分布式id生成器)
 - [一 常见算法](#一-常见算法)
   - [1.1 基于UUID](#11-基于uuid)
