add baidu uid-generator

--- a/source/_posts/2022-11-29-id-gen.md
+++ b/source/_posts/2022-11-29-id-gen.md
@@ -4,7 +4,7 @@ date: 2022-11-29 18:31:11
 tags: 架构
 ---
 
-分布式ID生成器，是分布式系统中最基础，最简单的一部分。通过对分布式ID生成器的学习，可以理解分布式系统设计的核心关键。
+分布式ID生成器，是分布式系统中最基础的一部分。通过学习分布式ID生成器设计，可以把握分布式系统设计的核心关键。
 
 <!-- more -->
 
@@ -18,18 +18,21 @@ tags: 架构
   - [1.3 Snowflake](#13-snowflake)
   - [1.4 方案对比](#14-方案对比)
 - [二 业内实践](#二-业内实践)
-  - [2.1 Leaf（美团点评）](#21-leaf美团点评)
+  - [2.1 uid-generator (百度)](#21-uid-generator-百度)
+    - [总结](#总结)
+  - [2.2 Leaf（美团点评）](#22-leaf美团点评)
     - [Leaf-Segment模式](#leaf-segment模式)
     - [Leaf-snowflake模式](#leaf-snowflake模式)
-    - [总结](#总结)
-  - [2.2 微信seqsvr](#22-微信seqsvr)
     - [总结](#总结-1)
+  - [2.3 微信seqsvr](#23-微信seqsvr)
+    - [总结](#总结-2)
 - [参考资料](#参考资料)
 
 
 ## 引子：为什么需要分布式ID生成器？
 1. 大规模数据要求数据分区分库，需要保证业务主键不冲突
 1. 多实例微服务，需要保证产生消息主键不冲突
+1. 用户行为事件，如何保证顺序
 1. ...
 
 ## 一 常见算法
@@ -134,7 +137,7 @@ IDGen --> Client: 返回ID，内存记录自增1
 
 
 ### 1.3 Snowflake
-Snowflake是Twitter公司采用的一种算法，使用int64正数部分作为ID。Snowflake及其变种，如MongoDB的ObjID，在业内应用较为广泛。
+Snowflake是Twitter公司采用的一种算法，使用int64正数部分作为ID。Snowflake及其变种，如[MongoDB ObjID][6]，在业内应用较为广泛。
 ```
 +--------------------------------------------------------------------------+
 | 1 Bit Unused | 41 Bit Timestamp |  10 Bit NodeID  |   12 Bit Sequence ID |
@@ -174,9 +177,27 @@ Snowflake算法在同一节点毫秒内最多生成的ID数量 = 1024 X 4096 = 4
 ## 二 业内实践
 这一部分分享业内成熟的分布式ID生成器实践。
 
-### 2.1 Leaf（美团点评）
+### 2.1 uid-generator (百度)
+[uid-generator][4]基于Snowflake实现，调整位数分配为1-28-22-13，使用秒时间戳。
+相比Twitter的Snowflake，支持更大规模多实例部署（2^22=4194304）。百度的思路是把uid-generator作为lib整合到服务中，无需独立部署ID生成器服务。
 
-[Leaf](https://github.com/Meituan-Dianping/Leaf/blob/master/README_CN.md)是美团点评的分布式ID生成系统，提供**segment**和**snowflake**两种模式，分别对DB Segment模式和Snowflak做了优化。
+```
++------------------------------------------------------------------------------------+
+| 1 Bit Unused | 28 Bit Timestamp |  22 Bit NodeID(WorkerID)  |   13 Bit Sequence ID |
++------------------------------------------------------------------------------------+
+```
+
+使用秒时间戳，同一秒同一节点生成的ID连续分布，容易被扫描攻击。百度的解决思路是引入**双环形缓存**，按一定策略异步生成缓存ID，减少ID连续性。
+
+![](/img/baidu-ringbuffer.png)
+
+#### 总结
+百度uid-generator的出发点是**去ID生成器服务**。为此增加ID中的WorkerID位数，减少Timestamp位数，采用秒时间戳，引入缓存机制减少ID连续性，实现较复杂。
+优点是无需独立部署独立ID生成器服务，建议只在不复杂的单体服务中使用。
+
+### 2.2 Leaf（美团点评）
+
+[Leaf][3]是美团点评的分布式ID生成系统，提供**segment**和**snowflake**两种模式，分别对DB Segment模式和Snowflake做了优化。
 
 #### Leaf-Segment模式
 Leaf-segment模式依赖DB，采用Segment模式。在传统Segment模式实现上加上双buffer优化，解决发号服务某一号段用完，重新申请号段可能引起的请求耗时抖动。
@@ -192,12 +213,12 @@ Leaf-snowflake模式在snowflake算法基础上引入zk依赖，用zk给每个id
 
 #### 总结
 
-Leaf是美团优化实现的分布式ID生成器成熟方案。
+Leaf是美团优化实现的分布式ID生成器成熟方案，实用性较强。
 
-### 2.2 微信seqsvr
-IM场景要求用户维度消息有序，snowflake无法保证。微信自研并演进出一套序号生成器架构，具有很高参考价值。
+### 2.3 微信seqsvr
+IM场景要求用户消息严格有序，snowflake无法保证。微信自研并演进出一套序号生成器架构，具有很高参考价值。
 
-微信使用int64作为ID，每个用户有独立序号空间，在每个序号空间下，序号严格递增。
+微信使用int64作为ID，每个用户有独立序号空间，每个序号空间序号严格递增。
 
 <img src="/img/wx-seqsvr-01.webp">
 
@@ -218,6 +239,17 @@ IM场景要求用户维度消息有序，snowflake无法保证。微信自研并
 
 
 ## 参考资料
-[Leaf——美团点评分布式ID生成系统](https://tech.meituan.com/2017/04/21/mt-leaf.html)
-[微信序列号生成器架构设计及演变](https://www.infoq.cn/article/wechat-serial-number-generator-architecture)
-[Meituan-Dianping/Leaf](https://github.com/Meituan-Dianping/Leaf/blob/master/README_CN.md)
+
+- [Leaf——美团点评分布式ID生成系统][1]
+- [微信序列号生成器架构设计及演变][2]
+- [Meituan-Dianping/Leaf][3]
+- [百度uid-generator][4]
+- [滴滴Tinyid][5]
+- [MongoDB ObjID][6]
+
+[1]: https://tech.meituan.com/2017/04/21/mt-leaf.html
+[2]: https://www.infoq.cn/article/wechat-serial-number-generator-architecture
+[3]: https://github.com/Meituan-Dianping/Leaf/blob/master/README_CN.md "Meituan-Dianping/Leaf"
+[4]: https://github.com/baidu/uid-generator/blob/master/README.zh_cn.md
+[5]: https://github.com/didi/tinyid
+[6]: https://www.mongodb.com/docs/manual/reference/method/ObjectId/
