--- a/source/_posts/2022-11-29-id-gen.md
+++ b/source/_posts/2022-11-29-id-gen.md
@@ -9,7 +9,7 @@ tags: 架构
 <!-- more -->
 
 - [引子：为什么需要分布式ID生成器？](#引子为什么需要分布式id生成器)
-- [一 常见算法](#一-常见算法)
+- [一 常见方案](#一-常见方案)
   - [1.1 基于UUID](#11-基于uuid)
   - [1.2 基于数据库](#12-基于数据库)
     - [1.2.1 自增主键](#121-自增主键)
@@ -17,7 +17,7 @@ tags: 架构
     - [1.2.3 Segment（号段）模式](#123-segment号段模式)
   - [1.3 Snowflake](#13-snowflake)
   - [1.4 方案对比](#14-方案对比)
-- [二 业内实践](#二-业内实践)
+- [二 业界实践](#二-业界实践)
   - [2.1 uid-generator (百度)](#21-uid-generator-百度)
     - [总结](#总结)
   - [2.2 Leaf（美团点评）](#22-leaf美团点评)
@@ -35,7 +35,7 @@ tags: 架构
 1. 用户行为事件，如何保证顺序
 1. ...
 
-## 一 常见算法
+## 一 常见方案
 ### 1.1 基于UUID
 提到分布式ID，最容易想到的是UUID。UUID可以保证不冲突，但不保证顺序，一般不建议使用。
 
@@ -49,7 +49,7 @@ tags: 架构
 - 空间开销大（这点大部分情况可以忽略）
 
 **如何优化？**
-可以在UUID前拼上时间段，使UUID整体有序
+可以在UUID前拼上时间段，使UUID趋势递增。
 
 ### 1.2 基于数据库
 #### 1.2.1 自增主键
@@ -163,18 +163,16 @@ Snowflake算法在同一节点毫秒内最多生成的ID数量 = 1024 X 4096 = 4
 
 ### 1.4 方案对比
 
-| 特性     | UUID   | DB自增ID           | DB自增ID（集群模式） | DB号段                 | Snowflake    |
-| -------- | ------ | ------------------ | -------------------- | ---------------------- | ------------ |
-| 外部依赖 | 无     | 依赖DB             | 依赖DB               | 依赖DB                 | 无           |
-| 有序性   | 无序   | 严格递增           | 整体递增             | 整体递增               | 整体递增     |
-| 性能     | 高     | 受限于单机IO，一般 | 受限于多机IO，较高   | 高                     | 无IO,最高    |
-| 复杂性   | 低     | 低                 | 高                   | 中                     | 低           |
-| 扩展性   | 高     | 无法扩展           | 低                   | 中                     | 高           |
-| 容灾能力 | 强     | 无                 | 可容灾，容灾能力有限 | 可容灾，需要服务层实现 | 强           |
-| 关键缺点 | 不安全 | IO瓶颈，单点故障   | IO瓶颈               | 需要DB依赖             | 存在时间回拨 |
+| 方案       | 长度    | 趋势递增 | 单调递增 | 依赖三方组件 | 关键缺点                     |
+| ---------- | ------- | -------- | -------- | ------------ | ---------------------------- |
+| UUID       | 128bits | 否       | 否       | 无           | version-1存在暴露MAC地址风险 |
+| DB自增ID   | 64bits  | 是       | 是       | 是           | 依赖DB，重                   |
+| DB自增ID   | 64bits  | 是       | 是       | 是           | 依赖DB，重                   |
+| DB集群模式 | 64bits  | 是       | 否       | 是           | 依赖DB，重                   |
+| DB号段模式 | 64bits  | 是       | 否       | 是           | 依赖DB，重                   |
+| Snowflake  | 64bits  | 是       | 否       | 否           | 存在时间回拨                 |
 
-
-## 二 业内实践
+## 二 业界实践
 这一部分分享业内成熟的分布式ID生成器实践。
 
 ### 2.1 uid-generator (百度)
@@ -216,7 +214,7 @@ Leaf-snowflake模式在snowflake算法基础上引入zk依赖，用zk给每个id
 Leaf是美团优化实现的分布式ID生成器成熟方案，实用性较强。
 
 ### 2.3 微信seqsvr
-IM场景要求用户消息严格有序，snowflake无法保证。微信自研并演进出一套序号生成器架构，具有很高参考价值。
+IM场景要求用户消息序号严格单调递增，snowflake无法保证。微信自研并演进出一套序号生成器架构，具有很高参考价值。
 
 微信使用int64作为ID，每个用户有独立序号空间，每个序号空间序号严格递增。
 
