--- a/source/_posts/2022-11-29-id-gen.md
+++ b/source/_posts/2022-11-29-id-gen.md
@@ -165,8 +165,7 @@ Snowflake算法在同一节点毫秒内最多生成的ID数量 = 1024 X 4096 = 4
 
 | 方案       | 长度    | 趋势递增 | 单调递增 | 依赖三方组件 | 关键缺点                     |
 | ---------- | ------- | -------- | -------- | ------------ | ---------------------------- |
-| UUID       | 128bits | 否       | 否       | 无           | version-1存在暴露MAC地址风险 |
-| DB自增ID   | 64bits  | 是       | 是       | 是           | 依赖DB，重                   |
+| UUID       | 128bits | 否       | 否       | 否           | version-1存在暴露MAC地址风险 |
 | DB自增ID   | 64bits  | 是       | 是       | 是           | 依赖DB，重                   |
 | DB集群模式 | 64bits  | 是       | 否       | 是           | 依赖DB，重                   |
 | DB号段模式 | 64bits  | 是       | 否       | 是           | 依赖DB，重                   |
