--- a/source/_posts/2022-11-29-id-gen.md
+++ b/source/_posts/2022-11-29-id-gen.md
@@ -8,27 +8,6 @@ tags: 架构
 
 <!-- more -->
 
-- [引子：为什么需要分布式ID生成器？](#引子为什么需要分布式id生成器)
-- [一 常见方案](#一-常见方案)
-  - [1.1 基于UUID](#11-基于uuid)
-  - [1.2 基于数据库](#12-基于数据库)
-    - [1.2.1 自增主键](#121-自增主键)
-    - [1.2.2 自增主键-集群模式](#122-自增主键-集群模式)
-    - [1.2.3 Segment（号段）模式](#123-segment号段模式)
-  - [1.3 Snowflake](#13-snowflake)
-  - [1.4 方案对比](#14-方案对比)
-- [二 业界实践](#二-业界实践)
-  - [2.1 uid-generator (百度)](#21-uid-generator-百度)
-    - [总结](#总结)
-  - [2.2 Leaf（美团点评）](#22-leaf美团点评)
-    - [Leaf-Segment模式](#leaf-segment模式)
-    - [Leaf-snowflake模式](#leaf-snowflake模式)
-    - [总结](#总结-1)
-  - [2.3 微信seqsvr](#23-微信seqsvr)
-    - [总结](#总结-2)
-- [参考资料](#参考资料)
-
-
 ## 引子：为什么需要分布式ID生成器？
 1. 大规模数据要求数据分区分库，需要保证业务主键不冲突
 1. 多实例微服务，需要保证产生消息主键不冲突
@@ -56,12 +35,17 @@ tags: 架构
 数据库的自增主键可以用来做分布式ID，以Mysql为例
 ```sql
 CREATE TABLE SEQID (
-    id bigint(20) unsigned NOT NULL auto_increment, 
-    value char(10) NOT NULL default '',
+    `id` bigint(20) unsigned NOT NULL auto_increment, 
+    `value` char(10) NOT NULL default '',
     PRIMARY KEY (id),
 ) ENGINE=InnoDB;
 ```
 获取ID的方式：往SEQID表插入表插入一行记录，获取最新ID。
+
+```sql
+INSERT INTO SEQID(`value`) VALUES ('foobar');
+SELECT LAST_INSERT_ID();
+```
 
 **优点**
 - 实现简单
