--- a/source/_posts/2022-11-29-id-gen.md
+++ b/source/_posts/2022-11-29-id-gen.md
@@ -1,7 +1,7 @@
 ---
 title: 分布式ID生成器
 date: 2022-11-29 18:31:11
-tags: 架构
+tags: 设计
 ---
 
 分布式ID生成器，是分布式系统中最基础的一部分。通过学习分布式ID生成器设计，可以把握分布式系统设计的核心关键。
