--- a/source/_posts/2022-12-27-go-fn-map.md
+++ b/source/_posts/2022-12-27-go-fn-map.md
@@ -6,7 +6,7 @@ tags: 编程
 
 这是篇水文。
 
-函数式编程鼓励无状态编程，用函数模拟状态。在编程中，最基础的数据容量是Map，纯函数怎么实现Map呢？
+函数式编程鼓励无状态编程，用函数模拟状态。在编程中，最基础的数据容器是Map，纯函数怎么实现Map呢？
 
 <!-- more -->
 
