git default branch

--- a/source/_posts/2024-02-07-win-dev.md
+++ b/source/_posts/2024-02-07-win-dev.md
@@ -57,6 +57,9 @@ cmder带了git.exe，不需要额外安装。可以将`C:\opt\cmder\vendor\git-f
 # clone里保持换行符，commit时替换成LF（linux格式）
 git config --global core.autocrlf input
 git config --global core.safecrlf warn
+
+# 默认分支名main
+git config --global init.defaultBranch main
 ```
 
 ## 6 包管理器chocolatey和gnu make
